<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tastey.baking.bakingapp.activities.MainActivity">

    <fragment
        android:name="com.tastey.baking.bakingapp.fragments.MainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_frag" />

</FrameLayout>
